--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "webpk": "webpack -d --watch",
-    "server-dev": "nodemon server/server.js",
+    "build": "webpack -d --watch",
+    "start": "nodemon server/server.js",
     "seedData": "node database-mongoose/dataGenerator.js",
     "test": "jest",
     "deploy1": "aws s3 cp . s3://s3-fec-reviews --recursive",
