--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "styled-components": "^5"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
