--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "faker": "^5.1.0",
     "mongoose": "^5.11.12",
     "nano": "^9.0.3",
+    "newrelic": "^7.3.0",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "react": "^17.0.1",
