--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-star-rating-component": "^1.4.1",
+    "redis": "^3.1.2",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
